--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "pestphp/pest": "3.x-dev",
-        "pestphp/pest-plugin-laravel": "v3.0.0"
+        "pestphp/pest-plugin-laravel": "v3.0.0",
+        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
