--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "private": true,
-    "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "build-api-token-modal": "cd nova-components/ApiTokenModal && npm run dev",
+        "build-api-token-modal-prod": "cd nova-components/ApiTokenModal && npm run prod"
     },
     "devDependencies": {
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "vite": "^4.1.1"
+    },
+    "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8"
     }
 }
