--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "pestphp/pest": "3.x-dev",
         "pestphp/pest-plugin-laravel": "v3.0.0",
         "spatie/laravel-activitylog": "^4.8",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.9",
+        "staudenmeir/eloquent-json-relations": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
