fix default timezone in env example, fix CustomerApiToken Customer field

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Vouchermoney
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Yerevan
 APP_URL=http://localhost:8000
 
 APP_LOCALE=en
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=backend
+DB_DATABASE=vouchermoney
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -62,3 +62,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+NOVA_LICENSE_KEY=
