--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "alexwenzel/nova-dependency-container": "^1.12",
+        "darkaonline/l5-swagger": "^8.6",
         "kiritokatklian/nova-permission": "^4.0",
         "laravel/framework": "^11.9",
         "laravel/nova": "^4.0",
@@ -20,7 +21,8 @@
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.9",
         "staudenmeir/eloquent-json-relations": "^1.1",
-        "vm/api-token-modal": "@dev"
+        "vm/api-token-modal": "@dev",
+        "zircote/swagger-php": "^4.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
