--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "alexwenzel/nova-dependency-container": "^1.12",
         "darkaonline/l5-swagger": "^8.6",
+        "doctrine/dbal": "^4.2",
         "kiritokatklian/nova-permission": "^4.0",
         "laravel/framework": "^11.9",
         "laravel/nova": "^4.0",
