add View voucher nova action, change vouchers policy, make dockerfiles

--- a/.env.docker
+++ b/.env.docker
@@ -1,6 +1,6 @@
 APP_NAME=Vouchermoney
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:PUfKIPr8X2O3bddVPcD0zmHBxJUpuWQOCvODpxEMbbk=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Yerevan
 APP_URL=http://localhost:8000
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=pgsql
 DB_PORT=5432
 DB_DATABASE=vouchermoney
 DB_USERNAME=postgres
@@ -42,7 +42,7 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -63,4 +63,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-NOVA_LICENSE_KEY=
+NOVA_LICENSE_KEY=gfZtrglEDWXOZfYQ8FDs5zje6zPdYFkCiAS7Gqd0kxVhGmaKIM
