--- a/.env.docker
+++ b/.env.docker
@@ -1,9 +1,11 @@
 APP_NAME=Vouchermoney
 APP_ENV=local
-APP_KEY=base64:PUfKIPr8X2O3bddVPcD0zmHBxJUpuWQOCvODpxEMbbk=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Yerevan
-APP_URL=http://localhost:8000
+# APP_PORT need only for docker
+APP_PORT=8080
+APP_URL="http://localhost:${APP_PORT}"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,4 +65,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-NOVA_LICENSE_KEY=gfZtrglEDWXOZfYQ8FDs5zje6zPdYFkCiAS7Gqd0kxVhGmaKIM
+NOVA_LICENSE_USERNAME=
+NOVA_LICENSE_KEY=
