--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,11 @@ services:
     app:
         build:
             context: .
-            dockerfile: Dockerfile
-        container_name: laravel_app
+            dockerfile: docker/Dockerfile
+            args:
+                NOVA_LICENSE_USERNAME: ${NOVA_LICENSE_USERNAME}
+                NOVA_LICENSE_KEY: ${NOVA_LICENSE_KEY}
+        container_name: vouchermoney_app
         working_dir: /var/www
         volumes:
             - .:/var/www
@@ -12,14 +15,6 @@ services:
             - "9000" # Expose PHP-FPM internally for Nginx
         networks:
             - app-network
-        environment:
-            - DB_CONNECTION=pgsql
-            - DB_HOST=pgsql
-            - DB_PORT=5432
-            - DB_DATABASE=vouchermoney
-            - DB_USERNAME=postgres
-            - DB_PASSWORD=123123123
-            - REDIS_HOST=redis
 
     # Nginx Service to act as reverse proxy
     nginx:
@@ -27,9 +22,9 @@ services:
         container_name: nginx_server
         restart: always
         ports:
-            - "8080:80" # Nginx will serve on port 8080
+            - "${APP_PORT}:80" # Nginx will serve on port 8080
         volumes:
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+            - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
             - .:/var/www
         networks:
             - app-network
@@ -42,13 +37,13 @@ services:
         container_name: postgres_db
         restart: always
         environment:
-            POSTGRES_DB: vouchermoney
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: 123123123
+            POSTGRES_DB: ${DB_DATABASE}
+            POSTGRES_USER: ${DB_USERNAME}
+            POSTGRES_PASSWORD: ${DB_PASSWORD}
         volumes:
             - postgres_data:/var/lib/postgresql/data
         ports:
-            - "5432:5432"
+            - "${DB_PORT}:${DB_PORT}"
         networks:
             - app-network
 
@@ -58,7 +53,7 @@ services:
         container_name: redis_cache
         restart: always
         ports:
-            - "6379:6379"
+            - "${REDIS_PORT}:${REDIS_PORT}"
         networks:
             - app-network
 
